--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /Java2/Leccion1/Libro/nbproject/private/
 /Java/Leccion3/leccionClasesObjetos/nbproject/private/
 /Java/Leccion4/Aritmetica/nbproject/private/
+/Java/Leccion4/ProyectoCaja/nbproject/private/
