--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 /Java/Leccion3/leccionClasesObjetos/nbproject/private/
 /Java/Leccion4/Aritmetica/nbproject/private/
 /Java/Leccion4/ProyectoCaja/nbproject/private/
+/Java/Leccion4/Aritmetica/build/
+/Java/Leccion5/Encapsulamiento/nbproject/private/
