--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@
 /Java/Leccion4/ProyectoCaja/nbproject/private/
 /Java/Leccion4/Aritmetica/build/
 /Java/Leccion5/Encapsulamiento/nbproject/private/
+/Java/Leccion5/Encapsulamiento/build/
+/Java/Leccion5/ContextoEstatico/nbproject/private/
+/Java/Leccion5/ContextoEstatico/build/
