--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@
 /Java/Leccion7/Paquetes/build/
 /Java/Leccion8/PalabraFinal/nbproject/private/
 /Java/Leccion8/PalabraFinal/build/
+/Java/Leccion11/Ventas/nbproject/private/
+/Java/Leccion9/Arreglos/nbproject/private/
